# SpinPhony

./: .gitignore  CMakeLists.txt  README.md  build.sh  requirements.txt
include/: cpu_logic.h  gpu_logic.cuh
python/: 2TM.py  Gmp.py  SpinPhony.py  exp.py  expMartin.py  filter.py  plot-hybrid-lifetimes.py  plot-lifetimes-path.py  plot-lifetimes.py  plot-observables.py  yaml_to_hdf5.py  yaml_to_hdf5_band.py
src/: cpu_logic.cpp  gpu_logic.cu  main.cpp
